--- a/index.html
+++ b/index.html
@@ -86,6 +86,95 @@
       <p>Stay up to date with the latest news from the world of Ferrari</p>
       <button type="button" class="subscribe-btn">SUBSCRIBE</button>
     </section>
-    
+    <!-- footer links section -->
+    <section class="footer-link-area">
+      <div class="link-container">
+        <h5>RACING</h5>
+        <a href="#">Scuderia Ferrari HP </a>
+        <a href="#">Charles Leclerc</a>
+        <a href="#">Lewis Hamilton</a>
+        <a href="#">Hypercar</a>
+        <a href="#">GT Series</a>
+        <a href="#">Hypersail</a>
+        <a href="#">Esports</a>
+      </div>
+      <div class="link-container">
+        <h5>Sports Cars</h5>
+        <a href="#">Scuderia Ferrari HP </a>
+        <a href="#">Charles Leclerc</a>
+        <a href="#">Lewis Hamilton</a>
+        <a href="#">Hypercar</a>
+        <a href="#">GT Series</a>
+        <a href="#">Hypersail</a>
+        <a href="#">Esports</a>
+      </div>
+      <div class="link-container">
+        <h5>Collections</h5>
+        <a href="#">Scuderia Ferrari HP </a>
+        <a href="#">Charles Leclerc</a>
+        <a href="#">Lewis Hamilton</a>
+        <a href="#">Hypercar</a>
+        <a href="#">GT Series</a>
+        <a href="#">Hypersail</a>
+        <a href="#">Esports</a>
+      </div>
+      <div class="link-container">
+        <h5>Experiences</h5>
+        <a href="#">Scuderia Ferrari HP </a>
+        <a href="#">Charles Leclerc</a>
+        <a href="#">Lewis Hamilton</a>
+        <a href="#">Hypercar</a>
+        <a href="#">GT Series</a>
+        <a href="#">Hypersail</a>
+        <a href="#">Esports</a>
+      </div>
+      <div class="link-container">
+        <h5>About us</h5>
+        <a href="#">Scuderia Ferrari HP </a>
+        <a href="#">Charles Leclerc</a>
+        <a href="#">Lewis Hamilton</a>
+        <a href="#">Hypercar</a>
+        <a href="#">GT Series</a>
+        <a href="#">Hypersail</a>
+        <a href="#">Esports</a>
+      </div>
+    </section>
+    <!-- footer social links section -->
+    <section class="footer-social">
+      <div class="social-link">
+        <a href="#"
+          ><i class="fa-brands fa-square-facebook"></i> <span>Facebook</span></a
+        >
+      </div>
+      <div class="social-link">
+        <a href="#"
+          ><i class="fa-brands fa-instagram"></i> <span>Instagram</span></a
+        >
+      </div>
+      <div class="social-link">
+        <a href="#"
+          ><i class="fa-brands fa-linkedin"></i> <span>Linkedin</span></a
+        >
+      </div>
+      <div class="social-link">
+        <a href="#"><i class="fa-brands fa-tiktok"></i> <span>Tiktok</span></a>
+      </div>
+      <div class="social-link">
+        <a href="#"><i class="fa-brands fa-twitch"></i> <span>Twitch</span></a>
+      </div>
+      <div class="social-link">
+        <a href="#"><i class="fa-brands fa-x-twitter"></i> <span>X</span></a>
+      </div>
+      <div class="social-link">
+        <a href="#"
+          ><i class="fa-brands fa-youtube"></i> <span>Youtube</span></a
+        >
+      </div>
+      <div class="social-link">
+        <a href="#"
+          ><i class="fa-brands fa-discord"></i> <span>Discord</span></a
+        >
+      </div>
+    </section>
   </body>
 </html>
