Testing after clone the repo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
     </section>
     <!-- Category section -->
-    <section class="category-area"></section>
+    <section class="category-area">Upcoming</section>
     <!-- Newsletter section -->
     <section class="newsletter-area">
       <p>Stay up to date with the latest news from the world of Ferrari</p>
